# advent-of-code-24

./: .gitignore  CMakeLists.txt
src/common/: common.h  day_1_common.c  day_2_common.h
src/day_1/: day_1_common.h  day_1_part_1.c  day_1_part_2.c
src/day_2/: day_2_part_1.c  day_2_part_2.c
src/day_3/: day_3_part_1.c  day_3_part_2.c
